--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "react-dom": "^15.6.1",
     "react-highlight": "^0.10.0",
     "react-leaflet": "^1.4.0",
-    "react-leaflet-universal": "^1.1.0",
     "run-sequence": "^2.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -66,7 +65,6 @@
     "leaflet.markercluster": "^1.0.6",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-leaflet": "^1.4.0",
-    "react-leaflet-universal": "^1.1.0"
+    "react-leaflet": "^1.4.0"
   }
 }
